Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.2, 5.1.0 , 5.1.1, 5.2.0
-
Fix Version/s: 5.5.0
-
Component/s: Packaging & Installer
-
Labels:None
-
Environment:Kubuntu 13.04 amd64 on Core i5 desktop with Dell S2240T multitouch monitor.
Description
Qt library installed on Ubuntu 13.04 amd64 desktop by online installer haven't support for touchscreens. Probably because it was built without Xi2.
Attachments
Issue Links
- depends on
-
QTBUG-38935 [regression] X11 touch support doesn't work at all
-
- Closed
-
- is duplicated by
-
QTBUG-44178 Touch events are not detected in Qt/QML
-
- Closed
-
- is required for
-
QTBUG-44636 Issues to be fixed before 5.5 beta 1
-
- Closed
-
-
QTBUG-44653 Issues to be fixed before Qt 5.5 Beta
-
- Closed
-
For Gerrit Dashboard: QTBUG-35583 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
74357,5 | xcb: added env variables to show input devices and events | stable | qt/qtbase | Status: MERGED | +2 | 0 |
74565,1 | xcb: added env variables to show input devices and events | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |